fixed some spacing

--- a/CSS/media-queries.css
+++ b/CSS/media-queries.css
@@ -118,7 +118,7 @@ footer {
     }
 
     footer {
-        bottom: -300px;
+        bottom: -150px;
     }
 }
 
